# FroggeSchemas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/schemas/: __init__.py  activity_log.py  admin_access.py  audit_log.py  base.py  cards.py  contact.py  custom_embed.py  enums.py  envutil.py  event.py  event_template.py  finance.py  forms.py  github_activity.py  giveaway.py  glyph_builder.py  guild.py  image_upload.py  leveling.py  platform_stats.py  plugin_auth.py  plugin_event.py  plugin_giveaway.py  plugin_guild.py  plugin_manage_common.py  plugin_profile.py  plugin_raffle.py  plugin_staffing.py  plugin_vip.py  position.py  profiles.py  raffle.py  reaction_role.py  role_sync.py  routing.py  servicetoken.py  staffing.py  stream_alert.py  timeclock.py  (+5 more)
