[project]
name = "Schemas"
version = "1.0.0"
description = "This package contains the underlying data schemas used by the FroggeBot project."
readme = "README.md"
authors = [
    { name = "Stephanie Phillips", email = "stephanie@frogge.tech" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "tzdata>=2026.3",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "ruff>=0.15.21",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
